# deeplorenz

./: .gitignore  LICENSE  README.md  Untitled-1.ipynb  pyproject.toml  structure.txt
data/: lorenz_sol.csv
deeplorenz/: animlorenz.py  lorenzsystem.py  lplotter.py
