[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplorenz"
version = "0.1"
description = "A simple Deep Learnin package that predicts Lorenz attractor's chaotic properties"
authors = [
    {name = "Oguzhan Kasikci", email = "oguzhankasikci@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21,<2.0",
    "scipy>=1.7",
    "matplotlib>=3.7"
]

[project.urls]
"Homepage" = "https://github.com/oguzhankasikci/deeplorenz.git"